adjusted call to action buttons on index.html

--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
     <div class="welcome-title">
       Welcome to Our Chapter
     </div>
-
-    Tri Delta is an assembly of women with shared values where you can be yourself and belong to something bigger. We are <b>brave</b>, <b>bold</b> and <b>kind</b>. We are passionate about serving others, committed to becoming the best version of ourselves and dedicated to helping women <b>Live</b>, <b>Learn</b> and <b>Lead</b> – with Purpose – for a lifetime.
+    <div class="welcome-text">
+      Tri Delta is an assembly of women with shared values where you can be yourself and belong to something bigger. We are <b>brave</b>, <b>bold</b> and <b>kind</b>. We are passionate about serving others, committed to becoming the best version of ourselves and dedicated to helping women <b>Live</b>, <b>Learn</b> and <b>Lead</b> – with Purpose – for a lifetime.
+    </div>
   </div>
 
   <!---CALL TO ACTION-->
-  <div class="container">
+  <div class="container button-container">
     <div class="row">
       <div class="col-sm-6 button-content">
         <a href="aboutus.html" class="button">Learn More About Our Chapter!</a>
