--- a/FAQ.html
+++ b/FAQ.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-  <link href="https://fonts.googleapis.com/css?family=Handlee|Euphoria+Script" rel="stylesheet" type='text/css'>
   <!-- Custom styles for this template -->
   <link href="./css/philanthropy.css" rel="stylesheet">
   <link href="./css/index.css" rel="stylesheet">
@@ -41,6 +40,7 @@
   .answer{
     margin-left:7%;
     margin-right:7%;
+    font-family: Quicksand;
   }
   .FAQ{
     margin-left:2em;
@@ -161,7 +161,7 @@ Frequently Asked Questions
         </div>
       </div>
 
-      <!-- Social Media Icons-->
+        <!-- Social Media Icons-->
       <div class="social col-sm-4">
         <div class="footer-text2">
           Follow UCSD Tri Delta
@@ -178,9 +178,6 @@ Frequently Asked Questions
           </a>
           <a href="http://ucsdtridelta.tumblr.com/">
             <i class="fab ho fa-tumblr"></i>
-          </a>
-          <a href="https://twitter.com/dddatucsd">
-            <i class="fab ho fa-twitter"></i>
           </a>
         </div>
       </div>
