--- a/aboutus.html
+++ b/aboutus.html
@@ -154,7 +154,7 @@
 
    <hr class="style6">
     <div class="w3-center w3-mobile">
-      <h1 class="w3-center title-padding-1"> Symbols & Emblems </h1> 
+      <h1 class="w3-center title-padding-1 title-padding"> Symbols & Emblems </h1> 
 
     </div>
 
